--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,6 +61,7 @@ FastTrackIT 2015
                  var keyHint = jSonMessage.keyHint;
                  var keyNrGuesses = jSonMessage.keyNrGuesses;
                  var keyCounter=jSonMessage.keyCounter;
+                 var isMinimalScore=jSonMessage.isMinimalScore;
 
                  if(keySuccess=="false") {
                      if (keyHint == "higher")
@@ -72,6 +73,10 @@ FastTrackIT 2015
                  if(keySuccess=="true")
                  {
                      document.getElementById("serverResponse").innerHTML = "Congrats, you guessed the number " + document.getElementById("number").value + " after " + keyNrGuesses + " guesses."+"</br> Your time:"+keyCounter;
+                     if(isMinimalScore=="true")
+                      document.getElementById("serverResponse").innerHTML = "Congrats, you guessed the number " + document.getElementById("number").value + " after " + keyNrGuesses + " guesses."+"</br> You are now the first on this server with time:"+keyCounter;
+
+
                  }
              }
          }
