--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,7 +94,7 @@ FastTrackIT 2015
           <h1>FastTrackIT.org</h1>
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess</p>
+          <p>Welcome to NumGuess 3rd</p>
       </div>
   </div>
   <div id="navigation">
