--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,7 +88,7 @@ FastTrackIT 2015
           <h1>FastTrackIT.org</h1>
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuessssssss</p>
+          <p>Welcome to NumGuess!</p>
       </div>
   </div>
   <div id="navigation">
