-changed a title - added the project file for intellij

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@ FastTrackIT 2015
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello Lab</title>
+    <title>Hello FastTrackIT</title>
       <meta charset="utf-8"/>
       <link href="numguessstyle.css" rel="stylesheet" type="text/css"/>
 
