--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@ FastTrackIT 2015
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello FastTrackIT 2016</title>
+    <title>title</title>
       <meta charset="utf-8"/>
       <link href="css/numguessstyle.css" rel="stylesheet" type="text/css"/>
 
