--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,7 +28,7 @@ FastTrackIT 2015
           <h1>FastTrackIT.org</h1>
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess 2016!</p>
+          <p>Welcome to NumGuess 2016 my team!</p>
       </div>
   </div>
   <div id="navigation">
