--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@ FastTrackIT 2015
 
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess 2016 my team!</p>
+          <p>Welcome to NumGuess 2016 my team is THE FRUITS TEAM!</p>
       </div>
   </div>
   <div id="navigation">
