--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,11 +25,11 @@ FastTrackIT 2015
   <div id="header" >
 
       <div id="sitebranding">
-          <h1>FastTrackIT.org</h1>
+          <a href="http://www.fasttrackit.org" target="_blank">FastTrackIT.org</a>
 
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess 2016 my team is THE FRUITS TEAM!</p>
+          <p>Welcome to NumGuess 2016. Version 1.2</br> <b>My team is: THE FRUITS TEAM!</b></p>
       </div>
   </div>
   <div id="navigation">
