--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@ FastTrackIT 2015
 
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess 2016. Version 1.2</br> <b>My team is: THE FRUITS TEAM!</b></p>
+          <p>Welcome to NumGuess 2016. Version 1.2</br> <strong>My team is: THE FRUITS TEAM!</strong></p>
       </div>
   </div>
   <div id="navigation">
